--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Meet your deadline.">
-    <meta name="author" content="Gurjot Sidhu">
-    <title>Deadline</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="canonical" href="https://thatgurjot.com/deadline/sept.html">
+  <title>Deadline</title>
+
+  <link rel="canonical" href="https://thatgurjot.com/deadline/sept.html">
   <title>Deadline</title>
   <!-- Bootstrap v5.2.0 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -19,6 +18,35 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <!-- HTML Calendar -->
   <script src="./html-calendar.js"></script>
+  <!-- Goatcounter -->
+  <script data-goatcounter="https://thatgurjot.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
+  <meta name="description" content="Meet your writing deadline." />
+  <meta property="og:description" content="Meet your writing deadline.">
+  <meta name="twitter:description" content="Meet your writing deadline.">
+  <meta property="og:url" content="https://thatgurjot.com/deadline/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Deadline">
+
+  
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="thatgurjot.com">
+  <meta property="twitter:url" content="https://thatgurjot.com/deadline/">
+  <meta name="twitter:title" content="Deadline">
+
+  
+  <meta itemprop="image" content="https://thatgurjot.com/deadline/deadline-social-image.png" />
+  <meta property="og:image" content="https://thatgurjot.com/deadline/deadline-social-image.png" />
+  <meta name="twitter:image" content="https://thatgurjot.com/deadline/deadline-social-image.png" />
+  <meta name="twitter:image:src" content="https://thatgurjot.com/deadline/deadline-social-image.png" /> 
+  
+  <meta name="author" content="Gurjot." />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <style>
     th, td {
       text-align: center;
@@ -305,7 +333,7 @@
       } else if (rando < 0.5 && rando >= 0.25) {
         $('#no-msg').text("It's okay to rest sometimes :)")
       } else if (rando < 0.75 && rando >= 0.5) {
-        $('#no-msg').text("Issokay you got this. Poopoo strong :*")
+        $('#no-msg').text("Issokay bb you got this :*")
       }
       $("#no-msg").fadeIn("slow");
       $("#yes-no-buttons").animate({"opacity": 0.01}, 800)
