--- a/deadline-svelte/index.html
+++ b/deadline-svelte/index.html
@@ -7,32 +7,32 @@
     <title>Deadline</title>
 
     <!-- Bootstrap v5.2.0 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script context="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script context="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <!-- Confetti animation -->
     <script context="module" src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <!-- HTML Calendar -->
-    <script context="module" src="https://thatgurjot.com/deadline/html-calendar.js"></script>
+    <script context="module" src="https://buzo.tools/deadline/html-calendar.js"></script>
     <!-- Goatcounter -->
-    <script context="module" data-goatcounter="https://thatgurjot.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script context="module" data-goatcounter="https://buzotools.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
     <meta name="description" content="Meet your writing deadline." />
     <meta property="og:description" content="Meet your writing deadline.">
     <meta name="twitter:description" content="Meet your writing deadline.">
-    <meta property="og:url" content="https://thatgurjot.com/deadline/">
+    <meta property="og:url" content="https://buzo.tools/deadline/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Deadline">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="thatgurjot.com">
-    <meta property="twitter:url" content="https://thatgurjot.com/deadline/">
+    <meta property="twitter:domain" content="buzo.tools">
+    <meta property="twitter:url" content="https://buzo.tools/deadline/">
     <meta name="twitter:title" content="Deadline">
     
-    <meta itemprop="image" content="https://thatgurjot.com/deadline/deadline-social-image.png" />
-    <meta property="og:image" content="https://thatgurjot.com/deadline/deadline-social-image.png" />
-    <meta name="twitter:image" content="https://thatgurjot.com/deadline/deadline-social-image.png" />
-    <meta name="twitter:image:src" content="https://thatgurjot.com/deadline/deadline-social-image.png" /> 
+    <meta itemprop="image" content="https://buzo.tools/deadline/deadline-social-image.png" />
+    <meta property="og:image" content="https://buzo.tools/deadline/deadline-social-image.png" />
+    <meta name="twitter:image" content="https://buzo.tools/deadline/deadline-social-image.png" />
+    <meta name="twitter:image:src" content="https://buzo.tools/deadline/deadline-social-image.png" /> 
     
     <meta name="author" content="Gurjot." />
 
